# I2C_Proxy

./: CMakeLists.txt  I2C.cpp  I2C.hpp  I2C_freeRTOS.cpp  README.md
freertos/: I2C_freeRTOS.cpp  I2C_freeRTOS.hpp
